--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@redux-devtools/core": "^3.13.1",
     "babel-loader": "^9.1.0",
     "concurrently": "^7.6.0",
     "css-loader": "^6.7.2",
@@ -31,10 +32,13 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.6"
   }
 }
