--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.4",
