--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "firebase": "^9.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.4.4",
     "styled-components": "^5.3.6"
   }
